--- a/index.html
+++ b/index.html
@@ -26,12 +26,22 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="caminho_1.html">Caminho 1</a></li>
-                <li><a href="caminho_1.html">Caminho 2</a></li>
-                <li><a href="caminho_1.html">Caminho 3</a></li>
+                <li><a href="caminho_2.html">Caminho 2</a></li>
+                <li><a href="caminho_3.html">Caminho 3</a></li>
+                <li><a href="caminho_4.html">Caminho 4</a></li>
             </ul>
         </nav>
         <p>Clique no caminho que você quer ouvir no menu acima.</p>
     
+
+<!-- Footer com ícones de redes sociais -->
+<footer id="pf__footer" class="pf__footer">
+    <div class="pf__footer__content">
+        <p>2025 Ⓒ Victorino. Todos os direitos reservados. </p>
+    </div>         
+</footer>
+
+
     <!-- Script do JavaScript -->
     <script src="script.js"></script>
 </body>
