--- a/caminho_1.html
+++ b/caminho_1.html
@@ -103,6 +103,8 @@
     </section>
 
     <form action="https://formsubmit.co/lucass.victorino@gmail.com" method="POST" class="feedback">
+        <input type="hidden" name="_next" value="https://victorino62.github.io/audora_mixer/index.html">
+
         <h2>Envie sua percepção sobre os arquivos</h2>
         <textarea name="feedback" placeholder="Escreva aqui o que achou..." rows="6" required></textarea>
         <button type="submit">Enviar Feedback</button>
