ajustes finais Ricardo

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="caminho_1.html">Caminho 1</a></li>
-                <li><a href="caminho_2.html">Caminho 2</a></li>
-                <li><a href="caminho_3.html">Caminho 3</a></li>
-                <li><a href="caminho_4.html">Caminho 4</a></li>
+                <li><a href="caminho_1.html">C1</a></li>
+                <li><a href="caminho_2.html">C2</a></li>
+                <li><a href="caminho_3.html">C3</a></li>
+                <li><a href="caminho_4.html">C4</a></li>
             </ul>
         </nav>
         <p>Clique no caminho que você quer ouvir no menu acima.</p>
