--- a/caminho_1.html
+++ b/caminho_1.html
@@ -17,10 +17,10 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="caminho_1.html">Caminho 1</a></li>
-            <li><a href="caminho_2.html">Caminho 2</a></li>
-            <li><a href="caminho_3.html">Caminho 3</a></li>
-            <li><a href="caminho_4.html">Caminho 4</a></li>
+            <li><a href="caminho_1.html">C1</a></li>
+            <li><a href="caminho_2.html">C2</a></li>
+            <li><a href="caminho_3.html">C3</a></li>
+            <li><a href="caminho_4.html">C4</a></li>
         </ul>
     </nav>
     
@@ -102,13 +102,6 @@
         <button onclick="saveFeedback()">Salvar Feedback </button>
     </section>
 
-    <form action="https://formsubmit.co/lucass.victorino@gmail.com" method="POST" class="feedback">
-        <input type="hidden" name="_next" value="https://victorino62.github.io/audora_mixer/index.html">
-
-        <h2>Envie sua percepção sobre os arquivos</h2>
-        <textarea name="feedback" placeholder="Escreva aqui o que achou..." rows="6" required></textarea>
-        <button type="submit">Enviar Feedback</button>
-    </form>
 
 
 
@@ -127,5 +120,7 @@ target="_blank" rel="noopener noreferrer" title="Feedback aqui!">
 
     <!-- Script do JavaScript -->
     <script src="script.js"></script>
+
+<div id="toast" class="toast"></div>
 </body>
 </html>
